--- a/view/skin1/css/global.css
+++ b/view/skin1/css/global.css
@@ -325,6 +325,10 @@ hr {
 	font-size:9px;
 	color:#F00;
 }
+.den_nho {
+	font-size:9px;
+	
+}
 .row_title_line {
 	background-color:#ffffff;
 	border-top:1px dotted #CCC;
