--- a/view/skin1/css/bxslider.css
+++ b/view/skin1/css/bxslider.css
@@ -101,12 +101,12 @@
 
 .bx-wrapper .bx-prev {
 	left: 10px;
-	background: url('images/controls.png') no-repeat 0 -32px;
+	background: url('q7/controls.png') no-repeat 0 -32px;
 }
 
 .bx-wrapper .bx-next {
 	right: 20px;
-	background: url('images/controls.png') no-repeat -43px -32px;
+	background: url('q7/controls.png') no-repeat -43px -32px;
 }
 
 .bx-wrapper .bx-prev:hover {
@@ -146,7 +146,7 @@
 	width: 10px;
 	height: 11px;
 	outline: 0;
-	background: url('images/controls.png') -86px -11px no-repeat;
+	background: url('q7/controls.png') -86px -11px no-repeat;
 	margin: 0 3px;
 }
 
@@ -161,7 +161,7 @@
 	width: 9px;
 	height: 11px;
 	outline: 0;
-	background: url('images/controls.png') -86px -44px no-repeat;
+	background: url('q7/controls.png') -86px -44px no-repeat;
 	margin: 0 3px;
 }
 
