--- a/view/skin1/css/style.css
+++ b/view/skin1/css/style.css
@@ -805,7 +805,7 @@ img.ben-alignright, img.ben-right {margin: 0 0 1em 1.5em;}
 	padding: 0.6em 0.8em;
 }
 
-.ben-error {background: #FBE3E4; color: #8A1F11; border-color: #FBC2C4;}
+.ben-error {background: #FBE3E4; color: #8A1F11; border-color: #FBC2C4;display:none}
 .ben-error a {color: #8A1F11;}
 .number
 {
