--- a/view/skin1/css/style.css
+++ b/view/skin1/css/style.css
@@ -8,6 +8,11 @@ body {
 }
 input {
 	outline:none;
+	padding:5px;
+}
+select {
+	width:100%;
+	padding:5px;	
 }
 #head_logo
 {
@@ -306,7 +311,7 @@ a.catalog, a.catalog:link, a.catalog:visited {
 	float:left;
 	margin-top:1px;
 	margin-bottom:0px;
-	
+	border-top: 1px dotted #ccc;
 	
 }
 #right-menu-right ul li a {
@@ -333,7 +338,16 @@ a.catalog, a.catalog:link, a.catalog:visited {
 }
 #right-menu-panel ul
 {
-	padding-left:10px;	
+	margin-left:185px;
+	position:absolute;
+	background:#ddd;
+	z-index:1000;
+	
+	top:0px;
+}
+#right-menu-panel ul li
+{
+	
 }
 /*En Menu Bar*/
 #div-line-xanh {
@@ -377,12 +391,7 @@ a.afooter, a.afooter:link, a.afooter:visited {
 }
 .footer {
 	background-color: #ddd;
-	padding:10px;
-	/*
-	border-radius: 7px;
-	-moz-border-radius: 7px;
-	-webkit-border-radius: 7px;
-	*/
+	
 	border:1px solid #ccc;
 	text-align: center;
 	line-height: 24px;
@@ -781,11 +790,12 @@ a.afooter, a.afooter:link, a.afooter:visited {
 }
 #supportonline img
 {
-	margin:0 51px !important;	
+	
 }
-#supportonline p
+
+#supportonline div
 {
-	margin:0px 0px 12px 0 !important;	
+	text-align:center;
 }
 #ben-galary table
 {
@@ -826,4 +836,31 @@ textarea
 table.ben-form
 {
 	margin:0 auto;	
+}
+.icon-status
+{
+	position:absolute;	
+}
+.icon-new
+{
+	margin-top:120px;
+}
+.icon-hot
+{
+	margin-top:120px;
+	margin-left:120px;
+}
+.sitebar-sale
+{
+	margin-left:20px;
+}
+.sitebar-new
+{
+	margin-left:20px;
+	margin-top:90px;
+}
+.sitebar-hot
+{
+	margin-top:90px;
+	margin-left:130px;
 }
