--- a/view/skin2/css/style.css
+++ b/view/skin2/css/style.css
@@ -391,14 +391,45 @@ a.afooter, a.afooter:link, a.afooter:visited {
 	height:13px;
 }
 .footer {
-	background-color: #ddd;
-	
-	border:1px solid #ccc;
-	text-align: center;
+	background: #032c63; /* For browsers that do not support gradients */
+	/* For Safari 5.1 to 6.0 */
+	background: -webkit-linear-gradient(left,#032c63,#03618e,#032c63);
+	/* For Opera 11.1 to 12.0 */
+	background: -o-linear-gradient(left,#032c63,#03618e,#032c63);
+	/* For Fx 3.6 to 15 */
+	background: -moz-linear-gradient(left,#032c63t,#03618e,#032c63);
+	/* Standard syntax */
+	background: linear-gradient(to right, #032c63,#03618e,#032c63); 
 	line-height: 24px;
-	color: #333;
+	padding:20px 38px;
+	color:#6abdf2;
+	font-size:1.2em;
 }
-
+#footer-social
+{
+	position:absolute;
+	text-align:center;
+	margin-left:617px;
+	margin-top:56px;
+	font-style:italic;
+	color:#6abdf2;
+}
+.footer a
+{
+	color:#6abdf2;
+}
+#footer-logo
+{
+	position:absolute;
+	margin:25px 0 25px 835px;
+}
+.company
+{
+	color: #fff;
+	font-size:2em;
+	font-weight:bold;
+	margin-bottom:10px;
+}
 .box_lon2 {
 	height:63px;
 	width:180px;
@@ -789,14 +820,31 @@ a.afooter, a.afooter:link, a.afooter:visited {
 	width: 100%;
     height: 150px !important;
 }
-#supportonline img
+#supportonline
 {
-	
+	background: #FFF; /* For browsers that do not support gradients */
+    background: -webkit-linear-gradient(#FFF, #bbebfe); /* For Safari 5.1 to 6.0 */
+    background: -o-linear-gradient(#FFF, #bbebfe); /* For Opera 11.1 to 12.0 */
+    background: -moz-linear-gradient(#FFF, #bbebfe); /* For Firefox 3.6 to 15 */
+    background: linear-gradient(#FFF, #bbebfe); /* Standard syntax */
 }
 
 #supportonline div
 {
 	text-align:center;
+}
+#supportonline table
+{
+	width:100%;	
+}
+#supportonline tr
+{
+	vertical-align:top;	
+}
+#supportonline tr td:last-child
+{
+	font-weight:bold;
+	color:#0163a7;
 }
 #ben-galary table
 {
