--- a/view/skin3/css/style.css
+++ b/view/skin3/css/style.css
@@ -831,7 +831,6 @@ a.afooter, a.afooter:link, a.afooter:visited {
 }
 .loading {    
     background: url('images/loading.gif') center center no-repeat !important ;
-	background-repeat: no-repeat !important;
 	background-position: 50% 50% !important;
 	width: 100%;
     height: 150px !important;
@@ -929,6 +928,44 @@ table.ben-form
 	margin-top:90px;
 	margin-left:130px;
 }
+#menumain{
+	position: fixed;
+	top: 47px;
+	left: 14px;
+	display: none;
+	cursor: pointer;
+	z-index: 100;
+}
+#menumobile{
+	position: fixed;
+	z-index: 1000;
+	top: 0;
+	left: 0;
+	display: none;
+	background: #fff;
+	height: 100%;
+	overflow-y: auto;
+}
+#menumobile ul{
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+#menumobile li{
+	line-height: 25px;
+	border-top: thin solid #ccc;
+}
+#menumobile a{
+	width: 100%;
+	padding-left: 10px;
+	font-size: 1.2em;
+}
+#menumobile ul li ul li a{
+	padding-left: 20px;
+}
+#menumobile ul li ul li ul li a{
+	padding-left: 40px;
+}
 #menuleft{
 	position: absolute;
 	left: 0;
@@ -996,5 +1033,8 @@ table.ben-form
 @media screen and (max-width: 663px) {
 	.head_menu{
 		display: none;
+	}
+	#menumain{
+		display: block;
 	}
 }
