--- a/view/skin3/css/style.css
+++ b/view/skin3/css/style.css
@@ -417,7 +417,7 @@ a.afooter, a.afooter:link, a.afooter:visited {
 	position:absolute;
 	text-align:center;
 	right: 182px;
-	margin-top:113px;
+	top:113px;
 	font-style:italic;
 	color:#6abdf2;
 	z-index: 100;
@@ -426,7 +426,7 @@ a.afooter, a.afooter:link, a.afooter:visited {
 {
     position:absolute;
 	right: 200px;
-    margin-top:50px;
+    top:50px;
 	z-index: 100;
 }
 .footer a
@@ -436,7 +436,7 @@ a.afooter, a.afooter:link, a.afooter:visited {
 #footer-logo
 {
 	position:absolute;
-	margin-top:66px;
+	top:66px;
 	right: 45px;
 	z-index: 100;
 }
@@ -928,6 +928,9 @@ table.ben-form
 	margin-top:90px;
 	margin-left:130px;
 }
+.ben-editor img{
+	max-width: 100%;
+}
 #menumain{
 	position: fixed;
 	top: 47px;
@@ -980,6 +983,12 @@ table.ben-form
 	cursor: pointer;
 	z-index: 100;
 }
+.view-product-mobile{
+	display: none;
+}
+.product-item{
+	position: relative;
+}
 @media screen and (max-width: 969px) {
 	.fix1000{
 		width: auto;
@@ -1030,11 +1039,74 @@ table.ben-form
 		display: block;
 	}
 }
+@media screen and (max-width: 745px) {
+	.footer{
+		padding: 10px;
+	}
+	#footer-social
+	{
+		position: unset;
+		text-align: center;
+		background: #012641;
+	}
+	#footer-report
+	{
+		position: unset;
+		text-align: center;
+		background: #012641;
+	}
+
+	#footer-logo
+	{
+		position: unset;
+		text-align: center;
+		background: #012641;
+	}
+}
 @media screen and (max-width: 663px) {
 	.head_menu{
 		display: none;
 	}
 	#menumain{
 		display: block;
+	}
+}
+@media screen and (max-width: 527px) {
+	.view-product-desktop{
+		display: none;
+	}
+	.view-product-mobile{
+		display: block;
+	}
+	.product-item{
+		width: 50%;
+	}
+	.product-cell{
+		margin: 5px;
+		padding: 5px;
+		border: thin solid #CCC;
+		border-radius: 5px;
+		height: 270px;
+	}
+	.product-item .icon-hot{
+		right: 15px;
+		bottom: 15px;
+	}
+	.product-item .icon-new{
+		bottom: 15px;
+	}
+
+	.product-item .lazy{
+		width: 100%;
+		max-height: 200px;
+	}
+	.product-left{
+		width: 100%;
+	}
+	.product-mainimage table{
+		width: 100%;
+	}
+	.product-mainimage img{
+		width: 100%;
 	}
 }
